Mise à jour compléte du projet Projet-4

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-index.html
+ <!DOCTYPE html>
+ <html lang="fr">
+ <head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="widht-device-widht, initial-scale=1.0">
+   <title>Ohmyfood</title>
+   <link rel="stylesheet" type="text/css" href="css/Styles.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  </head>
+   <body>
+   	<header>
+   		<div class="logo">
+       <img src="assets/logo/ohmyfood.png" alt="logo"> 
+      </div>
+      <div class="localisation">
+        <i class="fas fa-map-marker-alt"></i>
+        <p>Paris, Belleville</p>
+      </div>
+    </header>
+
+    <main>
+
+   	<section class="intro">
+   		<h2>Réservez le menu qui vous convient</h2>
+   		<p>Découvrez des restaurants d'execption,selectionnés par nos soins</p>
+   		<button>Explorez nos restaurants</button>
+   	</section> 
+    <section id="fonctionnement">
+        <h2>Fonctionnement</h2>
+        <div class="steps">
+          <div class="step">
+            <i class="fa-solid fa-mobile-screen-button"></i>
+            <p>Choisissez un restaurant</p>
+        </div>
+        <div class="step">
+          <i class="fa-solid fa-list"></i>
+          <p>Composez votre menu</p>
+        </div>
+        <div class="step">
+          <i class="fa-solid fa-store"></i>
+          <p>Degustez au restaurant</p>
+       </div>
+     </div>
+      </section>
+
+   	<section class="restaurants">
+   		<h2>Restaurants</h2>
+   		<div class="restaurant-card">
+   			<img src="assets/images/restaurants/resto1.jpg" alt="la palette du gout">
+   			<h3>La palette du gout</h3>
+   			<p>Ménilmontant</p>
+   		</div>
+   		<div class="restaurant-card">
+   			<img src="assets/images/restaurants/resto2.jpg" alt="La note enchantée">
+   			<h3>La note enchantée</h3>
+   			<p>Charonne</p>
+   		</div>
+   </section>
+  </main>
+  <footer>
+    <div class="footer-logo">
+      <img src="assets/logo/ohmyfood.png" alt="logo">
+    </div>
+    <div class="footer-links">
+    <div class="footer-link">
+      <i class="fas fa-plus-circle"></i>
+      <p>Proposer un restaurant</p>
+   </div>
+   <div class="footer-link">
+    <i class="fas fa-handshake"></i>
+    <p>Devenir partenaire</p>
+   </div>
+  </div>
+  <div class="footer-info">
+    <p> Mentions légales</p>
+    <p>Contacts</p>
+  </div>
+</footer>
+</body>
+</html>
