Mise à jour des styles et correction des chemins des fichiers css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
    <meta charset="utf-8">
    <meta name="viewport" content="widht-device-widht, initial-scale=1.0">
    <title>Ohmyfood</title>
-   <link rel="stylesheet" type="text/css" href="css/Styles.css">
+   
+   <link rel="stylesheet" href="scss/main.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   </head>
    <body>
