Ajouter les dernieres modifications

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
  <!DOCTYPE html>
  <html lang="fr">
  <head>
-   <meta charset="utf-8">
+   <meta charset="UTF-8">
    <meta name="viewport" content="widht-device-widht, initial-scale=1.0">
    <title>Ohmyfood</title>
-   
-   <link rel="stylesheet" href="scss/main.css">
+   <link rel="stylesheet" type="text/css" href="./css/style.css">
+   <link rel="stylesheet" href="./scss/main.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   </head>
    <body>
@@ -56,6 +56,16 @@
    			<h3>La note enchantée</h3>
    			<p>Charonne</p>
    		</div>
+      <div class="restaurant-card">
+        <img src="assets/images/restaurants/resto3.jpg" alt="A la francaise">
+        <h3>A la francaise</h3>
+        <p>Cité rouge</p>
+      </div>
+      <div class="restaurant-card">
+        <img src="assets/images/restaurants/resto4.jpg" alt="Le delice des sens ">
+        <h3>Le délices des sens</h3>
+        <p>Folie-mericourt</p>
+      </div>
    </section>
   </main>
   <footer>
