--- a/resto1.html
+++ b/resto1.html
@@ -11,36 +11,35 @@
 
     <body>
     <header>
-        <a href="index.html" class="back-button"><i class="fas fa-arrow-left"></i></a>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <div class="logo">
             <img src="assets/logo/ohmyfood.png" alt="logo">
         </div>
     </header>
 
     <main>
-        <section class="menu">
-            <div class="menu-header">
-                <img src="assets/images/restaurants/resto1.jpg" alt="nom du Restaurant">
-                <h2>La palette du gout</h2>
-           </div>
-           <div class="menu-items">
-            <h3>Entrées</h3>
+        <section class="restaurant">
+            <img src="assets/images/restaurants/resto1.jpg" alt="nom du Restaurant">
+            <h1>La palette du gout<i class="far fa-heart heart"></i></h1>
+        </section>
+           <section class="menu">
+            <h2>ENTREES</h2>
             <div class="menu-item">
-                <span>Fricassée d'escargots</span>
-                <span class="price">25€</span>
+                <h3>Fricassée d'escargots<span>25€</span></h3>
                 <p>Au piment d'Espelette</p>
+                <i class="fas fa-check check"></i>
             </div>
 
             <div class="menu-item">
-                <span>Foie gras de canard mi-cuit</span>
-                <span class="price">35€</span>
+                <h3>Foie gras de canard mi-cuit <span>35€</span></h3>
                 <p>Et ses copeaux de truffe noire</p>
+                <i class="fas fa-check check"></i>
             </div>
 
             <div class="menu-item">
-                <span>Oeuf au plat</span>
-                <span class="price">20€</span>
-                <p>Assaisonné à la truffe sur lit de caviar</p>
+                <h3>Oeuf au plat</h3> <span>20€</span>
+               <p>Assaisonné à la truffe sur lit de caviar</p>
+               <i class="fas fa-check check"></i>
             </div>
 
            </div>
