remplacez le dossier par celui ci

--- a/resto1.html
+++ b/resto1.html
@@ -113,7 +113,7 @@
             <article class="menu__card menu-item--2">
               <div class="menu__content">
                 <div class="menu__content--infos">
-                <h3 class="card__title">Parmentier de queue de boeuf<span>35€</span></h3>
+                <h3 class="card__title">Parmentier de queue de boeuf</h3>
                 <div class="menu__infos">
                 <p class="menu__infos--subtitle">A la truffe noire sur sa purée de panais</p>
                 </div>
