--- a/resto1.html
+++ b/resto1.html
@@ -6,6 +6,7 @@
         <title>La palette du gout</title>
         <link rel="stylesheet" href="sass/resto1.css">
         <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     </head>
 
@@ -17,7 +18,7 @@
         <a href="index.html" class="header-container__arrow">
           <i class="fas fa-arrow-left"></i>
         </a>
-         <img src="assets/logo/ohmyfood.png" alt="logo" class="header-container__logo header-container__no-margin">
+         <img src="assets/logo/ohmyfood.png" alt="logo" class="header-container__logo ">
         </div>
       </nav>
     </header>
@@ -40,7 +41,7 @@
         <div class="menu__list">
           <h2 class="menu__list--title">ENTREÉS</h2>
         </div>
-                 <div class="menu__card">
+                 <div class="menu__cards">
       <article class="menu__card menu__item--1">
         <div class="menu__content">
         <div class="menu__content--infos">
@@ -91,7 +92,7 @@
 
 
            <section class="menu menus menu__2">
-            <div class="men__list">
+            <div class="menu__list">
               <h2 class="menu__list--title">PLATS</h2>
                 </div>
                 <div class="menu__cards">
@@ -142,7 +143,7 @@
               </div>
            </section> 
 
-           <section class="menu menus menu__3">
+           <section class="menu menus menus__3">
             <div class="menu__list">
               <h2 class="menu__list--title">DESSERTS</h2>
             </div>
@@ -150,6 +151,7 @@
                 <article class="menu__card menu__item--1">
                   <div class="menu__content">
                     <div class="menu__content--infos">
+                      <div class="title">
                 <h3 class="card__title">Paris-Brest</h3>
                   </div>
                   <div class="menu__infos">
@@ -162,9 +164,10 @@
                 <i class="fas fa-check check"></i>
               </div>
             </article>
-               <article class=" menu__cards menu-item--2">
+               <article class=" menu__card menu-item--2">
               <div class="menu__content">
                 <div class="menu__content--infos">
+                  <div class="title">
                 <h3 class="card__title">Macaron au chocolat d'exception</h3>
                 </div>
                 <div class="menu__infos">
@@ -180,8 +183,9 @@
 
             <article class="menu__card menu-item--3">
 
-              <div class="menu-content">
+              <div class="menu__content">
                 <div class="menu__content--infos">
+                  <div class="title">
                 <h3 class="card__title">Mousse au chocolat</h3>
                 </div>
                 <div class="menu__infos">
@@ -204,13 +208,13 @@
     
     <footer class="infos">
         <div class="infos--padding">
-          <h3 class="infos__logo">Ohmyfood</h3>
-            <ul class="infos__content">
-              <li class="infos content position">
+          <h3 class="infos_logo">Ohmyfood</h3>
+            <ul class="infos_content">
+              <li class="infos_content--position">
              <i class="fa-solid fa-utensils"></i>
              <a href="#">Proposer un restaurants</a>
               </li>
-              <li class="infos__content--position">
+              <li class="infos_content--position">
                <i class="fas fa-handshake"></i>
             <a href="#" class="contact-partenaire">Devenir partenaire</la>
             </li>
@@ -222,9 +226,9 @@
               <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
             </li>
          <ul>
-     /</div>
+     </div>
 </footer>
-</div>
+
 </main>
 </div>
 </body>
