Remplacement du dossier avec les nouvelles modifications

--- a/resto1.html
+++ b/resto1.html
@@ -216,7 +216,7 @@
               </li>
               <li class="infos_content--position">
                <i class="fas fa-handshake"></i>
-            <a href="#" class="contact-partenaire">Devenir partenaire</la>
+            <a href="#" class="contact-partenaire">Devenir partenaire</a>
             </li>
             <li>
               <a href="#">Mentions légales</a>
@@ -225,10 +225,10 @@
             <li>
               <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
             </li>
-         <ul>
+          </ul>
      </div>
 </footer>
-
+    </div>
 </main>
 </div>
 </body>
