--- a/resto2.html
+++ b/resto2.html
@@ -40,7 +40,7 @@
         <div class="menu__list">
           <h2 class="menu__list--title">ENTREÉS</h2>
         </div>
-                 <div class="menu__card">
+                 <div class="menu__cards">
       <article class="menu__card menu__item--1">
         <div class="menu__content">
         <div class="menu__content--infos">
@@ -204,15 +204,15 @@
     
     <footer class="infos">
         <div class="infos--padding">
-          <h3 class="infos__logo">Ohmyfood</h3>
-            <ul class="infos__content">
+          <h3 class="infos_logo">Ohmyfood</h3>
+            <ul class="infos_content">
               <li class="infos content position">
              <i class="fa-solid fa-utensils"></i>
              <a href="#">Proposer un restaurants</a>
               </li>
               <li class="infos__content--position">
                <i class="fas fa-handshake"></i>
-            <a href="#" class="contact-partenaire">Devenir partenaire</la>
+            <a href="#" class="contact-partenaire">Devenir partenaire</a>
             </li>
             <li>
               <a href="#">Mentions légales</a>
@@ -221,9 +221,9 @@
             <li>
               <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
             </li>
-         <ul>
-     /</div>
-</footer>
+          </ul>
+     </div>
+    </footer>
 </div>
 </main>
 </div>
