Remplacez le dossier Projet-4 par celui ci

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <img src="assets/images/restaurants/resto4.jpg" alt="Le délice des sens">
         <div class="card__content">
           <div>
-        <h3 class="card__title">délice des sens</h3>
+        <h3 class="card__title">Le délice des sens</h3>
         <p class="card__subtitle">Folie-Méricourt</p>
       </div>
       <div class="favorite">
