--- a/resto1.html
+++ b/resto1.html
@@ -53,7 +53,7 @@
           <span  class="price">25€</span>
         </div>
         <div class="menu__check">
-          <i class="fas fa-check check"></i>
+          <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
@@ -68,7 +68,7 @@
         <span class="price">35€</span>
         </div>
         <div class="menu__check">
-        <i class="fas fa-check check"></i>
+        <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
@@ -83,7 +83,7 @@
         <span class="price">20€</span>
         </div>
         <div class="menu__check">
-          <i class="fas fa-check check"></i>
+          <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
       </div>
@@ -107,7 +107,7 @@
                 <span class="price">40€</span>
                   </div>
                 <div class="menu__check">
-                <i class=" fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
               </article>
                
@@ -122,7 +122,7 @@
                 <span class="price">35€</span>
               </div>
               <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
               </article>
 
@@ -137,7 +137,7 @@
                 <span class="price">44€</span>
               </div>
               <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </article>
               </div>
@@ -161,7 +161,7 @@
                   <span class="price">18€</span>
                   </div>
                   <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </article>
                <article class=" menu__card menu-item--2">
@@ -177,7 +177,7 @@
               <span class="price">22€</span>
             </div>
             <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </article>
 
@@ -195,7 +195,7 @@
               <span class="price">23€</span>
             </div>
               <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </article>
           </div>
@@ -215,7 +215,7 @@
              <a href="#">Proposer un restaurants</a>
               </li>
               <li class="infos_content--position">
-               <i class="fas fa-handshake"></i>
+               <i class="fas fa-handshake-angle"></i>
             <a href="#" class="contact-partenaire">Devenir partenaire</a>
             </li>
             <li>
