--- a/resto2.html
+++ b/resto2.html
@@ -6,6 +6,7 @@
         <title>La note enchantée</title>
         <link rel="stylesheet" href="sass/resto1.css">
         <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     </head>
 
@@ -17,7 +18,7 @@
         <a href="index.html" class="header-container__arrow">
           <i class="fas fa-arrow-left"></i>
         </a>
-         <img src="assets/logo/ohmyfood.png" alt="logo" class="header-container__logo header-container__no-margin">
+         <img src="assets/logo/ohmyfood.png" alt="logo" class="header-container__logo ">
         </div>
       </nav>
     </header>
@@ -46,28 +47,28 @@
         <div class="menu__content--infos">
           <h3 class="card__title">Ravioles de foie gras</h3>
         <div class="menu__infos">
-          <p class="menu__infos--subtitle">Accompagnées de leur créme à la truffe </p>
+          <p class="menu__infos--subtitle">Accompagnées de leur créme à la truffe</p>
         </div>
         </div>
           <span  class="price">25€</span>
         </div>
         <div class="menu__check">
-          <i class="fas fa-check check"></i>
+          <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
       <article class="menu__card menu__item--2">
         <div class="menu__content">
         <div class="menu__content--infos">
-          <h3 class="card__title">Caviar oscietre</h3>
+          <h3 class="card__title">Caviar osciétre</h3>
         <div class="menu__infos">
-          <p class="menu__infos--subtitle">Sur blini à la farine de blé noir </p>
+          <p class="menu__infos--subtitle">Sur blini à la farine de blé noir</p>
         </div>
         </div>
         <span class="price">35€</span>
         </div>
         <div class="menu__check">
-        <i class="fas fa-check check"></i>
+        <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
 
@@ -76,81 +77,82 @@
         <div class="menu__content--infos">
           <h3 class="card__title">Homard et espuma de potiron</h3>
           <div class="menu__infos">
-            <p class="menu__infos--subtitle">Marinés aux zestes d'orange</p>
+            <p class="menu__infos--subtitle">Marinés au zestes d'orange</p>
           </div>
         </div>
         <span class="price">20€</span>
         </div>
         <div class="menu__check">
-          <i class="fas fa-check check"></i>
+          <i class="fa-solid fa-circle-check"></i>
         </div>
       </article>
-       <article class="menu__card menu__item--4">
-        <div class="menu-content">
-          <div class="menu-content--infos">
+
+      <article class="menu__card menu-item--4">
+        <div class="menu__content">
+          <div class="menu__content--infos">
             <h3 class="card__title">Foie gras de canard cuit entier</h3>
             <div class="menu__infos">
               <p class="menu__infos--subtitle">Confiture de figue et pain toasté</p>
-            </div>
           </div>
-          <span class="price">35€</span>
+        </div>
+        <span class="price">35€</span>
         </div>
         <div class="menu__check">
-          <i class="fas fa-check check"></i>
+          <i class="fa-solid fa-circle-check"></i>
         </div>
-       </article>
+      </article>
       </div>
       </section>
 
 
 
            <section class="menu menus menu__2">
-            <div class="men__list">
+            <div class="menu__list">
               <h2 class="menu__list--title">PLATS</h2>
                 </div>
                 <div class="menu__cards">
               <article class="menu__card menu-item--1">
                   <div class="menu__content">
                   <div class="menu__content--infos">
-                <h3 class="card__title">Filet de boeuf aux herbes</h3>
+                <h3 class="card__title">Noix de coquilles Saint-jacques</h3>
                   <div class="menu__infos">
-                <p class="menu__infos--subtitle">Accompagné de sa ribambelle de légumes</p>
+                <p class="menu__infos--subtitle">Sur le lit de purée de céleri -rave</p>
                   </div>
                   </div>
                 <span class="price">40€</span>
                   </div>
                 <div class="menu__check">
-                <i class=" fas fa-check check"></i>
+                <i class=" fa-solid fa-circle-check"></i>
               </div>
               </article>
                
             <article class="menu__card menu-item--2">
               <div class="menu__content">
                 <div class="menu__content--infos">
-                <h3 class="card__title">Parmentier de queue de boeuf<span>35€</span></h3>
+                <h3 class="card__title">Langoustine poélée</h3>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">A la truffe noire sur sa purée de panais</p>
+                <p class="menu__infos--subtitle">Purée de patate douce</p>
                 </div>
                 </div>
                 <span class="price">35€</span>
               </div>
               <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
               </article>
 
             <article class="menu__card menu-item--3">
               <div class="menu__content">
               <div class="menu__content--infos">
-                <h3 class="card__title">Filet de turbot</h3>
+                <h3 class="card__title">Mijoté de queue de boeuf</h3>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Aux agrumes</p>
+                <p class="menu__infos--subtitle">Et riz sauvage aux zetes de citron</p>
                 </div>
               </div>
-                <span class="price">44€</span>
+                <span class="price">45€</span>
               </div>
               <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </article>
               </div>
@@ -165,48 +167,52 @@
                   <div class="menu__content">
                     <div class="menu__content--infos">
                       <div class="title">
-                <h3 class="card__title">Paris-Brest</h3>
+                <h3 class="card__title">Macaron noisette et chocolat</h3>
                   </div>
                   <div class="menu__infos">
-                <p class="menu__infos--subtitle">Revisité</p>
+                <p class="menu__infos--subtitle">Glace au caramel brun et sel de Guérande</p>
+
+                </p>
                   </div>
                   </div>
                   <span class="price">18€</span>
                   </div>
                   <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </article>
-               <article class=" menu__cards menu-item--2">
+               <article class=" menu__card menu-item--2">
               <div class="menu__content">
                 <div class="menu__content--infos">
-                <h3 class="card__title">Macaron au chocolat d'exception</h3>
+                  <div class="title">
+                <h3 class="card__title">Baba au rhum revisité</h3>
                 </div>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Et glace à la vanille de Madagascar</p>
+                <p class="menu__infos--subtitle">Avec son coulis de citron</p>
                 </div>
               </div>
               <span class="price">22€</span>
             </div>
             <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </article>
 
-            <article class="menu__cards menu-item--3">
+            <article class="menu__card menu-item--3">
 
-              <div class="menu-content">
+              <div class="menu__content">
                 <div class="menu__content--infos">
-                <h3 class="card__title">Mousse au chocolat</h3>
+                  <div class="title">
+                <h3 class="card__title">Tarte au citron meringuée</h3>
                 </div>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Au piment d'Espelette et à la truffe noire</p>
+                <p class="menu__infos--subtitle">Destructurée</p>
                 </div>
               </div>
               <span class="price">23€</span>
             </div>
               <div class="menu__check">
-                <i class="fas fa-check check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </article>
           </div>
@@ -221,11 +227,11 @@
         <div class="infos--padding">
           <h3 class="infos_logo">Ohmyfood</h3>
             <ul class="infos_content">
-              <li class="infos content position">
+              <li class="infos_content--position">
              <i class="fa-solid fa-utensils"></i>
              <a href="#">Proposer un restaurants</a>
               </li>
-              <li class="infos__content--position">
+              <li class="infos_content--position">
                <i class="fas fa-handshake"></i>
             <a href="#" class="contact-partenaire">Devenir partenaire</a>
             </li>
@@ -238,8 +244,8 @@
             </li>
           </ul>
      </div>
-    </footer>
-  </div>
+</footer>
+    </div>
 </main>
 </div>
 </body>
