--- a/resto4.html
+++ b/resto4.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="widht-device-widht, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Le délice des sens </title>
         <link rel="stylesheet" href="sass/resto1.css">
         <link rel="stylesheet" href="css/style.css">
