--- a/restaurant/le_delice_des_sens.html
+++ b/restaurant/le_delice_des_sens.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>À la francaise</title>
-        <link rel="stylesheet" href="sass/resto1.css">
-        <link rel="stylesheet" href="css/style.css">
+        <title>Le délice des sens </title>
+        <link rel="stylesheet" href="../sass/resto1.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     </head>
@@ -15,22 +15,22 @@
     <header>
       <nav class="header-container">
         <div class="header-container__link header-container__back">
-        <a href="index.html" class="header-container__arrow">
+        <a href="../index.html" class="header-container__arrow">
           <i class="fas fa-arrow-left"></i>
         </a>
-         <img src="assets/logo/ohmyfood.png" alt="logo" class="header-container__logo ">
+         <img src="../assets/logo/ohmyfood.png" alt="logo" class="header-container__logo ">
         </div>
       </nav>
     </header>
 
     <main>
 
-      <img src="assets/images/restaurants/resto3.jpg" alt="nom du Restaurant" class="image-bg">
+      <img src="../assets/images/restaurants/resto4.jpg" alt="nom du Restaurant" class="image-bg">
             
     <div class="position">
     <div class="restaurant">
       <section class="restaurant__headline">
-          <h1 class="title">À la francaise</h1>
+          <h1 class="title">Le délice des sens</h1>
         <div class="favorite">
           <i class="fa-regular fa-heart"></i>
           <i class="fa-solid fa-heart favorite__full"></i>
@@ -45,9 +45,9 @@
       <article class="menu__card menu__item--1">
         <div class="menu__content">
         <div class="menu__content--infos">
-          <h3 class="card__title">Tartare de poulpe acidulé</h3>
+          <h3 class="card__title">Tartare de thon</h3>
         <div class="menu__infos">
-          <p class="menu__infos--subtitle">Aux zestes d'orange</p>
+          <p class="menu__infos--subtitle">Assaisonné au yuzu</p>
         </div>
         </div>
           <span  class="price">25€</span>
@@ -60,9 +60,9 @@
       <article class="menu__card menu__item--2">
         <div class="menu__content">
         <div class="menu__content--infos">
-          <h3 class="card__title">Velouté de légumes d'antan</h3>
+          <h3 class="card__title">Bouchée de homard croustillant</h3>
         <div class="menu__infos">
-          <p class="menu__infos--subtitle">Carotte,panais,topinambour</p>
+          <p class="menu__infos--subtitle">Et sa farandole de petits légumes</p>
         </div>
         </div>
         <span class="price">35€</span>
@@ -75,12 +75,12 @@
       <article class="menu__card menu__item--3">
         <div class="menu__content">
         <div class="menu__content--infos">
-          <h3 class="card__title">Soupe à l'oignon</h3>
+          <h3 class="card__title">Poulet rôti aux herbes de Provence</h3>
           <div class="menu__infos">
-            <p class="menu__infos--subtitle">Revisitée</p>
+            <p class="menu__infos--subtitle">Et sa créme de truffe</p>
           </div>
         </div>
-        <span class="price">20€</span>
+        <span class="price">40€</span>
         </div>
         <div class="menu__check">
           <i class="fa-solid fa-circle-check"></i>
@@ -99,24 +99,24 @@
               <article class="menu__card menu-item--1">
                   <div class="menu__content">
                   <div class="menu__content--infos">
-                <h3 class="card__title">coquilles Saint-jacques</h3>
+                <h3 class="card__title">Poulet rôti aux herbes de Provence</h3>
                   <div class="menu__infos">
-                <p class="menu__infos--subtitle">Accompagné d'une purée de panais</p>
+                <p class="menu__infos--subtitle">Et sa créme de truffe</p>
                   </div>
                   </div>
                 <span class="price">40€</span>
                   </div>
                 <div class="menu__check">
-                <i class=" fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
               </article>
                
             <article class="menu__card menu-item--2">
               <div class="menu__content">
                 <div class="menu__content--infos">
-                <h3 class="card__title">Magret de canard</h3>
+                <h3 class="card__title">Langouste rôtie</h3>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Et parmentier de pommes de terre</p>
+                <p class="menu__infos--subtitle">Et ses légumes de saison</p>
                 </div>
                 </div>
                 <span class="price">35€</span>
@@ -129,9 +129,9 @@
             <article class="menu__card menu-item--3">
               <div class="menu__content">
               <div class="menu__content--infos">
-                <h3 class="card__title">Pigeonneau d'Ille-et-Vilaine</h3>
+                <h3 class="card__title">Côte de boeuf Angus</h3>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Sur son lit de gnocchis aux légumes</p>
+                <p class="menu__infos--subtitle">Et sa purée de panais</p>
                 </div>
               </div>
                 <span class="price">44€</span>
@@ -152,10 +152,10 @@
                   <div class="menu__content">
                     <div class="menu__content--infos">
                       <div class="title">
-                <h3 class="card__title">Pétales de violettes glacés</h3>
+                <h3 class="card__title">Farandole de desserts</h3>
                   </div>
                   <div class="menu__infos">
-                <p class="menu__infos--subtitle">Et purée de noisettes</p>
+                <p class="menu__infos--subtitle">Du chef</p>
                   </div>
                   </div>
                   <span class="price">18€</span>
@@ -168,10 +168,10 @@
               <div class="menu__content">
                 <div class="menu__content--infos">
                   <div class="title">
-                <h3 class="card__title">Fondant au chocolat</h3>
+                <h3 class="card__title">Créme brulée</h3>
                 </div>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Revisité</p>
+                <p class="menu__infos--subtitle">revisité</p>
                 </div>
               </div>
               <span class="price">22€</span>
@@ -186,10 +186,10 @@
               <div class="menu__content">
                 <div class="menu__content--infos">
                   <div class="title">
-                <h3 class="card__title">Millefeuille croustillant</h3>
+                <h3 class="card__title">Tiramisu</h3>
                 </div>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Myrtilles et pâte d'amande</p>
+                <p class="menu__infos--subtitle">À la noisette</p>
                 </div>
               </div>
               <span class="price">23€</span>
