--- a/restaurant/la_palette_du_gout.html
+++ b/restaurant/la_palette_du_gout.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>La note enchantée</title>
-        <link rel="stylesheet" href="sass/resto1.css">
-        <link rel="stylesheet" href="css/style.css">
+        <title>La palette du gout</title>
+        <link rel="stylesheet" href="../sass/resto1.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     </head>
@@ -15,22 +15,22 @@
     <header>
       <nav class="header-container">
         <div class="header-container__link header-container__back">
-        <a href="index.html" class="header-container__arrow">
+        <a href="../index.html" class="header-container__arrow">
           <i class="fas fa-arrow-left"></i>
         </a>
-         <img src="assets/logo/ohmyfood.png" alt="logo" class="header-container__logo ">
+         <img src="../assets/logo/ohmyfood.png" alt="logo" class="header-container__logo ">
         </div>
       </nav>
     </header>
 
     <main>
 
-      <img src="assets/images/restaurants/resto2.jpg" alt="nom du Restaurant" class="image-bg">
+      <img src="../assets/images/restaurants/resto1.jpg" alt="nom du Restaurant" class="image-bg">
             
     <div class="position">
     <div class="restaurant">
       <section class="restaurant__headline">
-          <h1 class="title">La note enchantée</h1>
+          <h1 class="title">La palette du gout</h1>
         <div class="favorite">
           <i class="fa-regular fa-heart"></i>
           <i class="fa-solid fa-heart favorite__full"></i>
@@ -45,9 +45,9 @@
       <article class="menu__card menu__item--1">
         <div class="menu__content">
         <div class="menu__content--infos">
-          <h3 class="card__title">Ravioles de foie gras</h3>
+          <h3 class="card__title">Fricassée d'escargots</h3>
         <div class="menu__infos">
-          <p class="menu__infos--subtitle">Accompagnées de leur créme à la truffe</p>
+          <p class="menu__infos--subtitle">Au piment d'Espelette</p>
         </div>
         </div>
           <span  class="price">25€</span>
@@ -60,9 +60,9 @@
       <article class="menu__card menu__item--2">
         <div class="menu__content">
         <div class="menu__content--infos">
-          <h3 class="card__title">Caviar osciétre</h3>
+          <h3 class="card__title">Foie gras de canard mi-cuit</h3>
         <div class="menu__infos">
-          <p class="menu__infos--subtitle">Sur blini à la farine de blé noir</p>
+          <p class="menu__infos--subtitle">Et ses copeaux de truffe noire</p>
         </div>
         </div>
         <span class="price">35€</span>
@@ -75,27 +75,12 @@
       <article class="menu__card menu__item--3">
         <div class="menu__content">
         <div class="menu__content--infos">
-          <h3 class="card__title">Homard et espuma de potiron</h3>
+          <h3 class="card__title">Oeuf au plat</h3>
           <div class="menu__infos">
-            <p class="menu__infos--subtitle">Marinés au zestes d'orange</p>
+            <p class="menu__infos--subtitle">Assaisonné à la truffe sur lit de caviar</p>
           </div>
         </div>
         <span class="price">20€</span>
-        </div>
-        <div class="menu__check">
-          <i class="fa-solid fa-circle-check"></i>
-        </div>
-      </article>
-
-      <article class="menu__card menu-item--4">
-        <div class="menu__content">
-          <div class="menu__content--infos">
-            <h3 class="card__title">Foie gras de canard cuit entier</h3>
-            <div class="menu__infos">
-              <p class="menu__infos--subtitle">Confiture de figue et pain toasté</p>
-          </div>
-        </div>
-        <span class="price">35€</span>
         </div>
         <div class="menu__check">
           <i class="fa-solid fa-circle-check"></i>
@@ -106,7 +91,7 @@
 
 
 
-           <section class="menu menus menu__2">
+           <section class="menu menus menus__2">
             <div class="menu__list">
               <h2 class="menu__list--title">PLATS</h2>
                 </div>
@@ -114,24 +99,24 @@
               <article class="menu__card menu-item--1">
                   <div class="menu__content">
                   <div class="menu__content--infos">
-                <h3 class="card__title">Noix de coquilles Saint-jacques</h3>
+                <h3 class="card__title">Filet de boeuf aux herbes</h3>
                   <div class="menu__infos">
-                <p class="menu__infos--subtitle">Sur le lit de purée de céleri -rave</p>
+                <p class="menu__infos--subtitle">Accompagné de sa ribambelle de légumes</p>
                   </div>
                   </div>
                 <span class="price">40€</span>
                   </div>
                 <div class="menu__check">
-                <i class=" fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
               </article>
                
             <article class="menu__card menu-item--2">
               <div class="menu__content">
                 <div class="menu__content--infos">
-                <h3 class="card__title">Langoustine poélée</h3>
+                <h3 class="card__title">Parmentier de queue de boeuf</h3>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Purée de patate douce</p>
+                <p class="menu__infos--subtitle">A la truffe noire sur sa purée de panais</p>
                 </div>
                 </div>
                 <span class="price">35€</span>
@@ -144,12 +129,12 @@
             <article class="menu__card menu-item--3">
               <div class="menu__content">
               <div class="menu__content--infos">
-                <h3 class="card__title">Mijoté de queue de boeuf</h3>
+                <h3 class="card__title">Filet de turbot</h3>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Et riz sauvage aux zetes de citron</p>
+                <p class="menu__infos--subtitle">Aux agrumes</p>
                 </div>
               </div>
-                <span class="price">45€</span>
+                <span class="price">44€</span>
               </div>
               <div class="menu__check">
                 <i class="fa-solid fa-circle-check"></i>
@@ -167,12 +152,10 @@
                   <div class="menu__content">
                     <div class="menu__content--infos">
                       <div class="title">
-                <h3 class="card__title">Macaron noisette et chocolat</h3>
+                <h3 class="card__title">Paris-Brest</h3>
                   </div>
                   <div class="menu__infos">
-                <p class="menu__infos--subtitle">Glace au caramel brun et sel de Guérande</p>
-
-                </p>
+                <p class="menu__infos--subtitle">Revisité</p>
                   </div>
                   </div>
                   <span class="price">18€</span>
@@ -185,10 +168,10 @@
               <div class="menu__content">
                 <div class="menu__content--infos">
                   <div class="title">
-                <h3 class="card__title">Baba au rhum revisité</h3>
+                <h3 class="card__title">Macaron au chocolat d'exception</h3>
                 </div>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Avec son coulis de citron</p>
+                <p class="menu__infos--subtitle">Et glace à la vanille de Madagascar</p>
                 </div>
               </div>
               <span class="price">22€</span>
@@ -203,10 +186,10 @@
               <div class="menu__content">
                 <div class="menu__content--infos">
                   <div class="title">
-                <h3 class="card__title">Tarte au citron meringuée</h3>
+                <h3 class="card__title">Mousse au chocolat</h3>
                 </div>
                 <div class="menu__infos">
-                <p class="menu__infos--subtitle">Destructurée</p>
+                <p class="menu__infos--subtitle">Au piment d'Espelette et à la truffe noire</p>
                 </div>
               </div>
               <span class="price">23€</span>
@@ -232,7 +215,7 @@
              <a href="#">Proposer un restaurants</a>
               </li>
               <li class="infos_content--position">
-               <i class="fas fa-handshake"></i>
+               <i class="fas fa-handshake-angle"></i>
             <a href="#" class="contact-partenaire">Devenir partenaire</a>
             </li>
             <li>
